chore: Update npm dependencies and package.json

--- a/packages/uibits/package.json
+++ b/packages/uibits/package.json
@@ -1,9 +1,8 @@
 {
   "name": "uibits",
-  "private": true,
   "version": "0.0.1",
   "type": "module",
-  "author": "Bravinta",
+  "author": "bravinta",
 
   "exports": {
     ".": {
